--- a/greet/templates/privacy.html
+++ b/greet/templates/privacy.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+<pre>
 Privacy Policy for Bands.Twerk.Click
 
 Last Updated: 2023-12-30
@@ -25,3 +28,5 @@ Our website may contain links to other websites for your convenience and informa
 6. Changes to This Privacy Policy
 
 Bands.Twerk.Click may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.
+</pre>
+{% endblock %}
