--- a/greet/templates/index.html
+++ b/greet/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Coming to a stage near you ... {{ band_name }}!</h1>
-    <p><a href="{% url 'privacy' %}">Privacy Policy</a></p>
+    <p><a class="thick-link" href="{% url 'privacy' %}">Privacy Policy</a></p>
 {% endblock %}
