--- a/greet/templates/privacy.html
+++ b/greet/templates/privacy.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <pre>
-Privacy Policy for Bands.Twerk.Click
+<h1>Privacy Policy for Bands.Twerk.Click</h1>
 
 Last Updated: 2023-12-30
 
