--- a/restapi/templates/openapi.html
+++ b/restapi/templates/openapi.html
@@ -1,6 +1,10 @@
 {% extends 'prism_base.html' %}
 {% block content %}
-<pre class="openapi"><code class="language-yaml">
+<pre class="openapi">
+<code class="language-yaml">
+# This file demonstrates the configuration ChatGPT neededs to request
+# a band name via API. ChatGPT itself wrote the file.
+
 openapi: 3.0.0
 info:
   title: Random Band Name API
