--- a/templates/base.html
+++ b/templates/base.html
@@ -10,18 +10,33 @@
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+        }
         pre {
             width: 600px;           /* Sets the width of the element */
             white-space: pre-wrap;  /* Allows text to wrap within the container */
             word-wrap: break-word;  /* Breaks the words at the end of the line */
             overflow-wrap: break-word; /* Ensures long words do not overflow */
-            padding: 2rem;
-            text-align: justify-all;
+            padding: 1rem;
+            text-align: justify;
+            border: none;
+            margin: 0;
         }
         a.thick-link {
             font-weight: bolder;
             font-size: 110%;
             color: black;
+        }
+        div.styled-div {
+            border: 1px solid rgba(0,0,0,0.1); /* faint border */
+            box-shadow: 0 0 10px rgba(0,0,0,0.1); /* faint drop shadow */
+            text-align: center;
+            padding: 1rem;
         }
     </style>
 </head>
