Small tweaks to improve stability

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     {% else %}
     <title>Bands.Twerk.Click</title>
     {% endif %}
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     <style>
         body {
             align-items: center;
