--- a/restapi/templates/prism_base.html
+++ b/restapi/templates/prism_base.html
@@ -7,8 +7,8 @@
     {% else %}
     <title>Bands.Twerk.Click</title>
     {% endif %}
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     {% block additional_css %}
     <link href="{% static 'css/prism.css' %}" rel="stylesheet" />
     {% endblock %}
