Minor copy update

--- a/greet/templates/gallery.html
+++ b/greet/templates/gallery.html
@@ -25,7 +25,7 @@
 	data-bilderrahmen-title="The Fathers" alt="The Fathers" /></a>
 	<a href="https://images.twerk.click/Random_Band_0003.png" target="_blank"><img src="https://images.twerk.click/Thumbs/Random_Band_0003_tm.png"
 	data-bilderrahmen="gallery-01"
-	data-bilderrahmen-title="Teachers" alt="Teachers" /></a><br clear="all" />
+	data-bilderrahmen-title="The Schools" alt="The Schools" /></a><br clear="all" />
 	<a href="https://images.twerk.click/Random_Band_0004.png" target="_blank"><img src="https://images.twerk.click/Thumbs/Random_Band_0004_tm.png"
 	data-bilderrahmen="gallery-01"
 	data-bilderrahmen-title="Deep Throat & The Bellicose Juices!" alt="Deep Throat & The Bellicose Juices!" /></a>
