Vocabulary export end-point

--- a/greet/templates/index.html
+++ b/greet/templates/index.html
@@ -16,12 +16,12 @@ But, the fun didn't end there ...
 
 I developed <a class="thick-link" href="{% url 'random_band_endpoint' %}">a modest JSON GET endpoint</a> that dispenses random band names 24/7, supplemented by <a class="thick-link" href="{%  url 'openapi' %}">an OpenAPI spec</a>, and I even penned a <a class="thick-link" href="{% url 'privacy' %}">Privacy Policy</a> in legalese. Lots of busy work to be sure, but I had an ulterior motive.
 
-    My real aim was to connect the JSON endpoint, the spec, and the policy to an OpenAI GPT. I unleashed an autonomous agent that chooses a unique name for your band, designs matching constumes to fit your style, and drafts press releases about your next album before you can set foot in the studio. Have a look at the <a class="thick-link" href="{% url 'band_gallery' %}">automated artwork gallery</a>. 
+My real aim was to connect the JSON endpoint, the spec, and the policy to an OpenAI GPT. I unleashed an autonomous agent that chooses a unique name for your band, designs matching constumes to fit your style, and drafts press releases about your next album before you can set foot in the studio. Have a look at the <a class="thick-link" href="{% url 'band_gallery' %}">automated artwork gallery</a>. 
     
 Give it a whirl <a class="thick-link" href="https://chat.openai.com/g/g-cySOJm4lG-awesome-band-factory">here</a>, it's guaranteed fun!
 
-If you're interested in the architecture for this project, you can <a class="thick-link" href="https://github.com/mesolimbo/band-o-matic/">clone the band-o-matic repo on GitHub</a>. I'd love to hear your thoughts!
-    
-Thank you for you time and Happy New Year!
+If you're interested in the architecture for this project, you can <a class="thick-link" href="https://github.com/mesolimbo/band-o-matic/">clone the band-o-matic repo on GitHub</a>. I'd love to hear your thoughts! Thank you for you time and Happy New Year!
+
+p.s. For a dump of all the vocabulary please <a class="thick-link" href="{% url 'export_words' %}">click here</a>.
 </pre>
 {% endblock %}
